--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,6 +1,29 @@
 .card {
     width: 180px;
-    height: 300px;
+    padding: 10px;
     border: 2px solid black;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.tags-container {
+    display: flex;
+    /* Use flexbox for alignment */
+    flex-wrap: wrap;
+    /* Allow wrapping if needed */
+    margin-top: 5px;
+    /* Add space above */
+
+    margin-top: auto;
+
+}
+
+.tagname {
+    font-size: .6rem;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    padding: 1px 5px;
+    border: 0.5px solid black;
+    border-radius: 20px;
 }
