--- a/src/components/TakeNote.css
+++ b/src/components/TakeNote.css
@@ -3,8 +3,7 @@
     padding: 10px;
     border: 2px solid blue;
     border-radius: 15px;
-
-
+    background-color: white;
 }
 
 .takenote * {
@@ -19,7 +18,7 @@
     margin-bottom: 5px;
 
     border: none;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgb(255, 255, 255);
 
 }
 
@@ -43,17 +42,17 @@
 
 .green {
     color: rgb(13, 158, 0);
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgb(255, 255, 255);
 }
 
 .blue {
     color: rgb(0, 31, 207);
-    background-color: rgba(8, 10, 141, 0);
+    background-color: rgb(255, 255, 255);
 }
 
 .red {
     color: rgb(187, 20, 20);
-    background-color: rgba(179, 0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 
 .tags {
