--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -30,13 +30,16 @@
 
 }
 
-.navbar .navbarlist .nav-item {
+.nav-item {
     display: block;
     width: 100%;
     height: 50px;
     padding: 15px;
     text-decoration: none;
     color: white;
+    background-color: inherit;
+    text-align: left;
+    border: none;
 }
 
 .navbar .navbarlist .nav-item:hover {
