--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     height: 100vh;
     /* Full viewport height */
+    overflow-y: hidden;
+
 }
 
 .main-container {
@@ -10,4 +12,23 @@
     flex: 1;
     /* Takes the remaining height after the header */
     overflow: hidden;
+}
+
+.error-message {
+    background-color: #2c67fc;
+    /* Red */
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    /* Horizontally center the text */
+    align-items: center;
+    /* Vertically center the text */
+    height: 50px;
+    /* Set a height for the div */
 }
